[gd_scene load_steps=9 format=3 uid="uid://bcgfuh08blmhj"]

[ext_resource type="Script" uid="uid://dm2vrsqf858dx" path="res://scenes/door.gd" id="1_xyukd"]
[ext_resource type="Texture2D" uid="uid://byv1aenye18ro" path="res://assets/objects/door_animate_1.png" id="2_q65t3"]
[ext_resource type="Texture2D" uid="uid://ckxxo6k5didqr" path="res://assets/objects/door_animate_2.png" id="3_uiowy"]
[ext_resource type="Texture2D" uid="uid://cynuwsf1exd4b" path="res://assets/objects/door_animate_3.png" id="4_onn4c"]
[ext_resource type="Texture2D" uid="uid://coedvp3mnyahv" path="res://assets/objects/door_animate_4.png" id="5_kh67u"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xgbu6"]
size = Vector2(48, 47)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ftg81"]
size = Vector2(9, 122)

[sub_resource type="SpriteFrames" id="SpriteFrames_3k57u"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_q65t3")
}],
"loop": true,
"name": &"closed",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_kh67u")
}, {
"duration": 1.0,
"texture": ExtResource("4_onn4c")
}, {
"duration": 1.0,
"texture": ExtResource("3_uiowy")
}, {
"duration": 1.0,
"texture": ExtResource("2_q65t3")
}],
"loop": false,
"name": &"closing",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_q65t3")
}, {
"duration": 1.0,
"texture": ExtResource("3_uiowy")
}, {
"duration": 1.0,
"texture": ExtResource("4_onn4c")
}, {
"duration": 1.0,
"texture": ExtResource("5_kh67u")
}],
"loop": false,
"name": &"opening",
"speed": 4.0
}]

[node name="Door" type="StaticBody2D"]
script = ExtResource("1_xyukd")

[node name="Collision_Closed" type="CollisionShape2D" parent="."]
position = Vector2(0, 37.5)
shape = SubResource("RectangleShape2D_xgbu6")

[node name="Collision_Open" type="CollisionShape2D" parent="."]
position = Vector2(-19.5, 0)
shape = SubResource("RectangleShape2D_ftg81")
disabled = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_3k57u")
animation = &"closed"

[node name="InteractionArea" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="InteractionArea"]
polygon = PackedVector2Array(-24, -23, -38, 90, 38, 91, 24, -23)
